@@ -1,19 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX gorg-0.6.4-ruby19-date.patch 1010 RMD160 3a10f6299cc71a6a4a0ff4b68f5799a7c3883964 SHA1 6425fb286c03a1c7331ca067bdee4c232dff333f SHA256 820a263c3c9081a48bbcf768cab1a076038c41f680cb0115aca46d6a357b775c
 AUX gorg-0.6.4-ruby19.patch 6507 RMD160 705fc3466979f76d4f6e1754cbbfbd4c81ed9b81 SHA1 acf0e374320743945d12255a15196c908744d780 SHA256 da04a3da7112a06e9555d99153625455049392ec4b820a04c2aaebfd031284b9
 DIST gorg-0.6.3.tgz 56384 RMD160 dca61e17138763a2785893a83221533eb79ef1fa SHA1 33a306cec67fc208adf5843b272b8e674d1b57bc SHA256 3c4822b6d16a3fb04a772016589c68e6ad5bbcf240a3c621a7a7f8676d6303ce
 DIST gorg-0.6.4.tgz 56811 RMD160 ee7fc8d2363dbef654885de6a8383d50242bc51f SHA1 7f8bc3682be295219b0105f526686db7f46e586b SHA256 8ed0fa7da62aa16e58424943d87573bedb3fbab63fdf037eabbbbf470d57c18e
 EBUILD gorg-0.6.3-r2.ebuild 1380 RMD160 79eef59aaf1586f218dcc425ea8f5323c359b759 SHA1 051a91fd8796a3bcf3d29160dc70bb1937f810c9 SHA256 a609418147b16eff7e6ee14b76075e91b843246ab619d1f93bac0289b04a0de5
-EBUILD gorg-0.6.4-r1.ebuild 1615 RMD160 5927237968115c75136bc391784c28e579191cf7 SHA1 cd37839661473d10e9d3d8c31873eb2a81a6d7e3 SHA256 9e0cca651f2381be2dd62a60025fc4b57a48058be24a4a3496a782139985b163
+EBUILD gorg-0.6.4-r1.ebuild 1618 RMD160 aa9c039629bf1cb7a54ded7c9f8a0b12fec64444 SHA1 f82cb0577d5f9f6417b8339fe902e0d10b5ae6f2 SHA256 78b680a158b64ef399317529b3e548af844db5504373c6858fe5e06910464deb
 EBUILD gorg-0.6.4.ebuild 1202 RMD160 81d10b8fc0ebb41f78b6bb5919ebfb178ff9e119 SHA1 3eb3d39920bfa68b35c127fab9c4548fa8139976 SHA256 6ea5a571d2bce52b819b189daabe14137535e47cd7ed4a1a0a41c7beea4141e7
-MISC ChangeLog 4511 RMD160 eb42d047869a5a60cff2a8a97afc93710bcb950f SHA1 148355c7c6f3c8e7e3272217f7bd246f8a05b2f7 SHA256 7636f9908c6c9ccdff83aef8d22d8c2039152b9103777442bee7b7219f0905ec
+MISC ChangeLog 4622 RMD160 9008c27b6eaa347097939e10460494f6b4daf6f1 SHA1 50e1585fe9c76459128308a6a907ae1f460a4a08 SHA256 df4c18b2cd786790f71a13187e8b3b5c6408a28adfbd97a78510260ab6bf9ae6
 MISC metadata.xml 663 RMD160 c73e4a58b69b296262f3429b3ed19744ed54fffe SHA1 33d256015499692c85eac2fbebc0751279da170e SHA256 942eae02575f6f4ad751b5939379fa367eb55a081b04ef515aa7627bd97984ac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7jMBAACgkQiIP6VqMIqNcK+gD/WnINVk1OqW3Bqwr6TOs1v6v/
-bIier/E18A4sCGuOI6cA/jqR8NUCcHQ9p5XPbBiJfF0YoFb46qecR7poEJrcEk+T
-=/EQu
+iEYEAREKAAYFAk89WoYACgkQuUQtlDBCeQLLCQCfVGXSXOo7ZMlB4MlacwopiNth
+6jMAn0hPA7S4myBGoLfCArpT6BZvUHVT
+=8J9d
 -----END PGP SIGNATURE-----
