@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/gorg
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/gorg/ChangeLog,v 1.29 2011/12/10 10:10:12 graaff Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-servers/gorg/ChangeLog,v 1.30 2012/02/16 19:35:28 phajdan.jr Exp $
+
+  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gorg-0.6.4-r1.ebuild:
+  x86 stable wrt bug #403103
 
   10 Dec 2011; Hans de Graaff <graaff@gentoo.org> gorg-0.6.4-r1.ebuild:
   Drop ruby19 until all dependencies are also marked for ruby19.
